--- a/app/src/main/res/layout-sw600dp/fragment_item_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_item_detail.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/item_detail"
+        android:id="@+id/show_title"
         style="?android:attr/textAppearanceLarge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
         android:textIsSelectable="true"
+        android:text="title"
         tools:context="com.example.tvmazeapp.presentation.ItemDetailFragment" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
