--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_detail_container"
     android:layout_width="match_parent"
@@ -8,60 +7,91 @@
     tools:context=".presentation.ItemDetailShowsActivity"
     tools:ignore="MergeRootFrame">
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/item_detail_scroll_view"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/item_detail"
-            style="?android:attr/textAppearanceLarge"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="16dp"
-            android:paddingEnd="@dimen/container_horizontal_margin"
-            android:paddingStart="@dimen/container_horizontal_margin"
-            android:paddingTop="16dp"
-            android:textIsSelectable="true"
-            tools:context="com.example.tvmazeapp.presentation.ItemDetailFragment" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
 
-    </androidx.core.widget.NestedScrollView>
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/toolbar">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/detail_toolbar"
+            <TextView
+                android:id="@+id/show_title"
+                style="?android:attr/textAppearanceLarge"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingEnd="@dimen/container_horizontal_margin"
+                android:paddingStart="@dimen/container_horizontal_margin"
+                android:paddingTop="16dp"
+                android:gravity="center_horizontal"
+                android:text="title"
+                android:textSize="20sp"
+                android:textIsSelectable="true"
+                tools:context="com.example.tvmazeapp.presentation.ItemDetailFragment" />
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            <ProgressBar
+                android:id="@+id/poster_progress"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:visibility="visible" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/detail_poster"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:adjustViewBounds="true"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="@dimen/fab_margin"
-        app:layout_anchor="@+id/item_detail_scroll_view"
-        app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/stat_notify_chat" />
+            <TextView
+                android:id="@+id/genres"
+                style="?android:attr/textAppearanceLarge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingEnd="@dimen/container_horizontal_margin"
+                android:paddingStart="@dimen/container_horizontal_margin"
+                android:paddingTop="16dp"
+                android:gravity="center_horizontal"
+                android:text="Genres"
+                android:textSize="16sp"
+                android:textIsSelectable="true"
+                tools:context="com.example.tvmazeapp.presentation.ItemDetailFragment" />
 
+            <TextView
+                android:id="@+id/schedule"
+                style="?android:attr/textAppearanceLarge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingEnd="@dimen/container_horizontal_margin"
+                android:paddingStart="@dimen/container_horizontal_margin"
+                android:paddingTop="16dp"
+                android:gravity="center_horizontal"
+                android:text="Schedule"
+                android:textSize="16sp"
+                android:textIsSelectable="true"
+                tools:context="com.example.tvmazeapp.presentation.ItemDetailFragment" />
+
+            <TextView
+                android:id="@+id/summary"
+                style="?android:attr/textAppearanceLarge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingEnd="@dimen/container_horizontal_margin"
+                android:paddingStart="@dimen/container_horizontal_margin"
+                android:paddingTop="16dp"
+                android:gravity="left"
+                android:text="Summary"
+                android:textSize="16sp"
+                android:textIsSelectable="true"
+                tools:context="com.example.tvmazeapp.presentation.ItemDetailFragment" />
+
+        </LinearLayout>
+
+    </ScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
