--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -8,6 +8,14 @@
     android:layout_marginEnd="@dimen/container_horizontal_margin"
     android:layout_marginStart="@dimen/container_horizontal_margin">
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:visibility="visible" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/item_list"
         android:name="com.example.tvmazeapp.ItemListFragment"
@@ -15,7 +23,8 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
+        app:layoutManager="GridLayoutManager"
         tools:context="com.example.tvmazeapp.presentation.ItemDetailShowsActivity"
         tools:listitem="@layout/item_list_content" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
