Code reorganization in presentation.

--- a/app/src/main/res/layout-sw600dp/fragment_show_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_show_detail.xml
@@ -13,6 +13,6 @@
         android:padding="16dp"
         android:textIsSelectable="true"
         android:text="title"
-        tools:context="com.example.tvmazeapp.presentation.ItemDetailFragment" />
+        tools:context="com.example.tvmazeapp.presentation.views.ShowDetailFragment" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
