--- a/app/src/main/res/navigation/primary_details_nav_graph.xml
+++ b/app/src/main/res/navigation/primary_details_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/item_list_fragment"
-        android:name="com.example.tvmazeapp.presentation.ItemListFragment"
+        android:name="com.example.tvmazeapp.presentation.views.ShowsListFragment"
         android:label="ItemListFragment">
         <action
             android:id="@+id/show_item_detail"
@@ -15,9 +15,9 @@
     </fragment>
     <fragment
         android:id="@+id/item_detail_fragment"
-        android:name="com.example.tvmazeapp.presentation.ItemDetailFragment"
+        android:name="com.example.tvmazeapp.presentation.views.ShowDetailFragment"
         android:label="item_detail"
-        tools:layout="@layout/fragment_item_detail">
+        tools:layout="@layout/fragment_show_detail">
         <argument
             android:name="item_id"
             android:defaultValue=""
