--- a/app/src/main/res/navigation/primary_details_sub_nav_graph.xml
+++ b/app/src/main/res/navigation/primary_details_sub_nav_graph.xml
@@ -6,9 +6,9 @@
     app:startDestination="@id/fragment_item_detail">
     <fragment
         android:id="@+id/fragment_item_detail"
-        android:name="com.example.tvmazeapp.presentation.ItemDetailFragment"
+        android:name="com.example.tvmazeapp.presentation.views.ShowDetailFragment"
         android:label="@string/title_item_detail"
-        tools:layout="@layout/fragment_item_detail">
+        tools:layout="@layout/fragment_show_detail">
         <argument
             android:name="item_id"
             android:defaultValue=""
