--- a/app/src/main/res/layout-sw600dp/fragment_show_list.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_show_list.xml
@@ -3,26 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_list_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".presentation.views.ShowsActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/item_width" />
+        app:layout_constraintGuide_begin="440dp" />
 
     <ProgressBar
-        android:id="@+id/progress"
-        android:layout_width="match_parent"
+        android:id="@+id/progress_loading_show_list"
         android:layout_height="match_parent"
+        android:layout_width="0dp"
+        app:layout_constraintEnd_toStartOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/item_list"
-        android:name="com.example.tvmazeapp.ItemListFragment"
+        android:id="@+id/show_list_recycler_view"
+        android:name="com.example.tvmazeapp.presentation.views.ShowListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginEnd="@dimen/container_margin"
@@ -33,7 +36,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:context="com.example.tvmazeapp.presentation.views.ShowsActivity"
-        tools:listitem="@layout/item_list_content" />
+        tools:listitem="@layout/show_cardview" />
 
     <fragment
         android:id="@+id/item_detail_nav_container"
@@ -43,6 +46,7 @@
         android:layout_marginStart="@dimen/container_margin"
         app:defaultNavHost="false"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/primary_details_sub_nav_graph" />
