--- a/app/src/main/res/navigation/primary_details_nav_graph.xml
+++ b/app/src/main/res/navigation/primary_details_nav_graph.xml
@@ -13,14 +13,34 @@
             android:id="@+id/show_item_detail"
             app:destination="@id/item_detail_fragment" />
     </fragment>
+
     <fragment
         android:id="@+id/item_detail_fragment"
         android:name="com.example.tvmazeapp.presentation.views.ShowDetailFragment"
         android:label="item_detail"
         tools:layout="@layout/fragment_show_detail">
-        <argument
-            android:name="item_id"
-            android:defaultValue=""
-            app:argType="string" />
+
+        <action
+            android:id="@+id/show_episodes"
+            app:destination="@id/show_episodes_fragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/show_episodes_fragment"
+        android:name="com.example.tvmazeapp.presentation.views.ShowEpisodesFragment"
+        android:label="item_episodes"
+        tools:layout="@layout/fragment_show_episodes">
+
+        <action
+            android:id="@+id/episode_detail_fragment"
+            app:destination="@id/episode_detail_fragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/episode_detail_fragment"
+        android:name="com.example.tvmazeapp.presentation.views.ShowEpisodeDetailFragment"
+        android:label="item_episode_detail"
+        tools:layout="@layout/fragment_episode_detail">
+    </fragment>
+
 </navigation>
