--- a/app/src/main/res/menu/show_option_menu.xml
+++ b/app/src/main/res/menu/show_option_menu.xml
@@ -15,6 +15,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/menu_item_full_list"
+        android:title="Full list"
+        android:icon="@drawable/ic_list_alt_24"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_item_settings"
         android:title="Settings"
         android:icon="@drawable/ic_settings_24"
