--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="container_margin">8dp</dimen>
+    <dimen name="pad_button_margin">2dp</dimen>
     <dimen name="container_horizontal_margin">16dp</dimen>
 </resources>
