--- a/app/src/main/res/layout-sw600dp/fragment_show_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_show_detail.xml
@@ -44,6 +44,20 @@
                 android:textIsSelectable="true"
                 tools:context="com.example.tvmazeapp.presentation.views.ShowDetailFragment" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/buttonFavorites"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="Add To Favorites" />
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/genres"
                 style="?android:attr/textAppearanceLarge"
