--- a/app/src/main/res/menu/show_option_menu.xml
+++ b/app/src/main/res/menu/show_option_menu.xml
@@ -11,14 +11,14 @@
     <item
         android:id="@+id/menu_item_favorites"
         android:title="Favorites"
-        android:icon="@drawable/ic_settings_24"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_favorite_24"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_item_full_list"
         android:title="Full list"
         android:icon="@drawable/ic_list_alt_24"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_item_settings"
