--- a/app/src/main/res/navigation/primary_details_nav_graph.xml
+++ b/app/src/main/res/navigation/primary_details_nav_graph.xml
@@ -12,6 +12,10 @@
         <action
             android:id="@+id/show_item_detail"
             app:destination="@id/item_detail_fragment" />
+
+        <action
+            android:id="@+id/show_favorites_fragment"
+            app:destination="@id/shows_favorites_fragment" />
     </fragment>
 
     <fragment
@@ -41,6 +45,16 @@
         android:name="com.example.tvmazeapp.presentation.views.ShowEpisodeDetailFragment"
         android:label="TVMazeApp"
         tools:layout="@layout/fragment_episode_detail">
+    </fragment>
+
+    <fragment
+        android:id="@+id/shows_favorites_fragment"
+        android:name="com.example.tvmazeapp.presentation.views.ShowsFavoritesFragment"
+        android:label="Favorites"
+        tools:layout="@layout/fragment_show_favorites">
+        <action
+            android:id="@+id/action_to_item_detail_fragment"
+            app:destination="@id/item_detail_fragment" />
     </fragment>
 
 </navigation>
