--- a/app/src/main/res/layout-sw600dp/fragment_show_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_show_detail.xml
@@ -47,6 +47,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="20dp"
                 android:gravity="right"
                 android:orientation="horizontal">
 
