--- a/app/src/main/res/layout-sw600dp/fragment_show_detail.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_show_detail.xml
@@ -1,6 +1,7 @@
 <!-- Adding the same root's ID for view binding as other layout configurations -->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -45,18 +46,18 @@
                 tools:context="com.example.tvmazeapp.presentation.views.ShowDetailFragment" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="350dp"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_marginEnd="20dp"
                 android:gravity="right"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/buttonFavorites"
+                <ImageView
+                    android:id="@+id/imgFavorites"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="Add To Favorites" />
+                    app:srcCompat="@drawable/ic_favorite_border_30" />
             </LinearLayout>
 
             <TextView
@@ -69,7 +70,7 @@
                 android:paddingStart="@dimen/container_horizontal_margin"
                 android:paddingTop="16dp"
                 android:gravity="center_horizontal"
-                android:text="Genres"
+                android:text="@string/genres"
                 android:textSize="16sp"
                 android:textIsSelectable="true"
                 tools:context="com.example.tvmazeapp.presentation.views.ShowDetailFragment" />
@@ -84,7 +85,7 @@
                 android:paddingStart="@dimen/container_horizontal_margin"
                 android:paddingTop="16dp"
                 android:gravity="center_horizontal"
-                android:text="Schedule"
+                android:text="@string/schedule"
                 android:textSize="16sp"
                 android:textIsSelectable="true"
                 tools:context="com.example.tvmazeapp.presentation.views.ShowDetailFragment" />
@@ -99,7 +100,7 @@
                 android:paddingStart="@dimen/container_horizontal_margin"
                 android:paddingTop="16dp"
                 android:gravity="left"
-                android:text="Summary"
+                android:text="@string/summary"
                 android:textSize="16sp"
                 android:textIsSelectable="true"
                 tools:context="com.example.tvmazeapp.presentation.views.ShowDetailFragment" />
