--- a/app/src/main/res/layout/fragment_show_detail.xml
+++ b/app/src/main/res/layout/fragment_show_detail.xml
@@ -50,16 +50,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="50dp"
                 android:gravity="right"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/buttonFavorites"
+
+                <ImageView
+                    android:id="@+id/imgFavorites"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="@string/add_to_favorites" />
+                    app:srcCompat="@drawable/ic_favorite_border_30" />
+
             </LinearLayout>
 
             <TextView
