--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pad_text_color">#FFFFFFFF</color>
+
+    <color name="favorite">#FFC107</color>
 </resources>
