--- a/app/src/main/res/layout/activity_unlock.xml
+++ b/app/src/main/res/layout/activity_unlock.xml
@@ -8,7 +8,7 @@
     tools:context=".presentation.views.UnlockActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageViewLogoLock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/dot_layout"
